# ClashFlowManager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
cf_manager/: fixture.json  manage.py
cf_manager/cash_flows/: admin.py  apps.py  urls.py  views.py
cf_manager/cash_flows/forms/: __init__.py  cash_flows.py
cf_manager/cash_flows/migrations/: 0001_initial.py  0002_alter_cashflow_creation_date.py  0003_alter_cashflow_creation_date.py
cf_manager/cash_flows/models/: __init__.py  cash_flows.py
cf_manager/cash_flows/serializers/: __init__.py  cash_flows.py
cf_manager/cf_manager/: asgi.py  settings.py  urls.py  wsgi.py
cf_manager/reference_books/: admin.py  apps.py  urls.py  views.py
cf_manager/reference_books/migrations/: 0001_initial.py  0002_alter_type_name.py  0003_alter_status_name.py  0004_alter_category_name.py  0005_subcategory_unique_subcategory_per_category.py  0006_category_type_category_unique_category_per_type.py  0007_alter_category_options_alter_status_options_and_more.py  0008_alter_subcategory_name.py  0009_alter_category_name.py  0010_alter_status_name.py  0011_alter_type_name.py
cf_manager/reference_books/models/: __init__.py  categories.py  statuses.py  types.py
cf_manager/reference_books/serializers/: __init__.py  categories.py  statuses.py  types.py
cf_manager/reference_books/signals/cache/: __init__.py  cache_prefixes.py  categories.py  statuses.py  types.py
cf_manager/reference_books/utils/decorators/: cache.py
cf_manager/staticfiles/js/: subcategories.js
nginx/: nginx.conf
